--- a/store-after/app/assets/stylesheets/layout.css.scss
+++ b/store-after/app/assets/stylesheets/layout.css.scss
@@ -76,3 +76,54 @@ fieldset {
     font-size: 12px;
   }
 }
+
+pre {
+  display: block;
+  padding: 9.5px;
+  margin: 0 0 10px;
+  font-size: 13px;
+  line-height: 1.42857143;
+  color: #333;
+  word-break: break-all;
+  word-wrap: break-word;
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+.product-variant {
+  label {
+    // float:right;
+    /*width:170px;*/
+    margin:4px;
+    background-color:#EFEFEF;
+    border-radius:4px;
+    border:1px solid #D0D0D0;
+    overflow:auto;
+    cursor: pointer;
+  }
+  label {
+    text-align:center;
+    // font-size: 1.2em;
+    padding:3px 3px;
+    // display:block;
+  }
+
+  input {
+    /*position:absolute;*/
+    /*top:-20px;*/
+    display: none;
+  }
+
+  input:checked + label {
+    background-color:#404040;
+    color:#F7F7F7;
+  }
+
+  label.test-border {
+    border: 1px red solid;
+  }
+}
+
+// #/Withd-[7, 8, 9, 6]/ {
+  // background-color: red;
+// }
